# n1k1TTa

./: .gitignore  CHANGELOG.md  LICENSE  n1k1TTa.cabal
app/: Main.hs
src/: Equality.hs  Eval.hs  Syntax.hs  Value.hs
