cabal-version:   3.4
name:            n1k1TTa
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          jaysonamati
maintainer:      jaysonamati@gmail.com
category:        Math
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

common shared
    build-depends:
          unbound-generics >= 0.4.3
        , mtl >= 2.2.1,

library
    import:           warnings
                    , shared
    exposed-modules:  Value
                    , Syntax
                    , Eval
                    , Equality
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable n1k1TTa
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        n1k1TTa

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite n1k1TTa-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        n1k1TTa
